import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar

plugins {
    id("com.gradleup.shadow") version "9.4.2"
    id("com.palantir.git-version") version "5.0.0"
    id("java")
}

group = "de.twonirwana"
val gitVersion: groovy.lang.Closure<String> by extra
version = gitVersion()

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(25))
    }}

apply(plugin = "com.gradleup.shadow")

dependencies {
    implementation(project(":app"))
    implementation(project(":web"))
}

tasks {
    named<ShadowJar>("shadowJar") {
        archiveFileName.set("${archiveBaseName.get()}-${archiveVersion.get()}.jar")

        manifest {
            attributes(mapOf("Main-Class" to "de.twonirwana.infinity.WebApp"))
        }
    }
}

